[package]
name = "hacash"
default-run = "hacash"
version = "0.3.0"
edition = "2024"

[dependencies]
x16rs = {path = "./x16rs"}
sys = {path = "./sys"}
field = {path = "./field"}
protocol = {path = "./protocol"}
db = {path = "./db"}
mint = {path = "./mint"}
node = {path = "./node"}
app = {path = "./app"}





