[package]
name = "hacash"
default-run = "hacash"
version = "0.4.0"
edition = "2024"

[dependencies]
x16rs          = {path = "./x16rs"}
sys            = {path = "./sys"}
field          = {path = "./field"}
basis          = {path = "./basis"}
# protocol = {path = "./protocol"}
# db = {path = "./db", default-features = false}
# mint = {path = "./mint"}
# chain = {path = "./chain"}
# node = {path = "./node"}
# server = {path = "./server"}
# app = {path = "./app"}
# vm = {path = "./vm", optional = true }

[features]
# default = ["db-sled", "hip20", "tex", "ast", "hvm", "p2sh"] #, "ocl"]
# hip20 = ["mint/hip20"]
# tex = ["protocol/tex"]
# ast = ["protocol/ast"]
# hvm = ["dep:vm", "field/hvm"]
# p2sh = ["dep:vm", "protocol/p2sh", "vm/p2sh"]
# ocl = ["app/ocl"]
# db-sled = ["db/db-sled"]
# db-rusty-leveldb = ["db/db-rusty-leveldb"]
# db-leveldb-sys = ["db/db-leveldb-sys"]
# db-rocksdb = ["db/db-rocksdb"]


[profile.release]
debug = false       # for RUST_BACKTRACE=1 
opt-level = 3       # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

