[package]
name = "hacash"
default-run = "hacash"
version = "0.4.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    ".",
    "app",
    "node",
    "chain",
    "server",
    "mint",
    "vm",
    "sdk",
    "protocol",
    "basis",
    "field",
    "db",
    "sys",
    "x16rs",
]
exclude = [
    "chainv1",
    "chainv2",
    "chainv3",
    "chainv4",
    "node2",
    "node3",
    "node5",
]

[dependencies]
x16rs          = {path = "./x16rs"}
sys            = {path = "./sys"}
field          = {path = "./field"}
basis          = {path = "./basis"}
db             = {path = "./db", default-features = false}
protocol       = {path = "./protocol"}
vm             = {path = "./vm", optional = true }
chain          = {path = "./chain"}
mint           = {path = "./mint"}
server         = {path = "./server"}
node           = {path = "./node"}
app            = {path = "./app"}
# server = {path = "./server"}
hex = "0.4.3"
serde_json = "1.0"

[features]
default = ["db-sled", "hip20", "hip22", "tex", "ast", "vm"] #, "ocl"]
hip20 = ["mint/hip20"]
hip22 = ["mint/hip22"]
tex = ["protocol/tex"]
ast = ["protocol/ast"]
vm = ["dep:vm", "field/vm", "protocol/vm"]
ocl = ["app/ocl"]
db-sled = ["db/db-sled"]
db-rusty-leveldb = ["db/db-rusty-leveldb"]
db-leveldb-sys = ["db/db-leveldb-sys"]
db-rocksdb = ["db/db-rocksdb"]


[profile.release]
debug = false       # for RUST_BACKTRACE=1 
opt-level = 3       # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[profile.wasm-release]
inherits = "release"
opt-level = "z"     # Optimize wasm for code size
