[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
x16rs = { path = "../x16rs" }
sys = { path = "../sys" }
field = { path = "../field" }
protocol = { path = "../protocol" }
db = { path = "../db" }
node = { path = "../node" }
mint = { path = "../mint" }
hex = "0.4.3"
serde = "1.0.215"
serde_json = "1.0.133"
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "rustls"] }
getrandom = "0.3.2"
lazy_static = "1.4.0"


