[package]
name = "mint"
version = "0.1.0"
edition = "2021"

[dependencies]
x16rs          = {path = "../x16rs"}
sys            = {path = "../sys"}
field          = {path = "../field"}
basis          = {path = "../basis"}
protocol       = {path = "../protocol"}
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
concat-idents = "1.1.5"
serde_json = "1.0"

[features]
hip20 = []
