[package]
name = "sdk"
version = "0.1.1"
edition = "2024"


[lib]
crate-type = ["cdylib"]


[dependencies]
sys = { path = "../sys" }
field = { path = "../field" }
protocol = { path = "../protocol" }
hex = "0.4.3"
wasm-bindgen = "0.2.100"


[profile.dev]
panic = "abort"


[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

