[package]
name = "sdk"
version = "0.1.1"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
sys            = {path = "../sys"}
field          = {path = "../field"}
basis          = {path = "../basis"}
protocol       = {path = "../protocol"}
hex = "0.4.3"
wasm-bindgen = "0.2.100"
