[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
sys = { path = "../sys" }
field = { path = "../field" }
protocol = { path = "../protocol" }
chain = { path = "../chain" }
mint = { path = "../mint" }
node = { path = "../node" }
hex = "0.4.3"
axum = "0.7.9"
tokio = "1.41.1"
serde = "1.0.215"
serde_json = "1.0.133"
getrandom = "0.3.2"
lazy_static = "1.5.0"