[package]
name = "sys"
version = "0.1.0"
edition = "2024"

[dependencies]
ini = "1.3.0"
hex = "0.4.3"
base64 = "0.22.1"
chrono = "0.4.38"
base58check = "0.1.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
ripemd = "0.1.1"
libsecp256k1 = { version = "0.7.2",  features = ["hmac", "static-context"], default-features = false }
# getrandom = { version = "0.3.2", features = ["wasm_js"] }
async-broadcast = "0.7.2"