[package]
name = "vm"
version = "0.1.0"
edition = "2024"

[dependencies]
sys            = {path = "../sys"}
field          = {path = "../field", features = ["hvm"]}
basis          = {path = "../basis"}
protocol       = {path = "../protocol"}
hex = "0.4.3"
sha2 = "0.10.2"
sha3 = "0.10.1"
ripemd = "0.1.1"
dyn-clone = "1.0.17"
concat-idents = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
p2sh = []


[dev-dependencies]
mint = {path = "../mint"}
