[package]
name = "vm"
version = "0.1.0"
edition = "2024"

[features]
default = []
calcfunc = []

[dependencies]
sys            = {path = "../sys"}
field          = {path = "../field"}
basis          = {path = "../basis"}
protocol       = {path = "../protocol"}
mint           = {path = "../mint"}
hex = "0.4.3"
sha2 = "0.10.2"
sha3 = "0.10.1"
ripemd = "0.1.1"
dyn-clone = "1.0.17"
concat-idents = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
testkit = {path = "../testkit"}
